# auto-driving-model-car

./: .gitignore  README.md  control.py  main.py  model.h5  requirements.txt  speed_up_the_jetson.sh  test_detection.py  traffic.xml
AdaptiveCruise/: adaptive_cruise_control.py
Camera/: camera.py  camera_calibration.py  mtx.txt
CarMove/: CMakeCache.txt  CMakeLists.txt  CarMove.py  Makefile  README.md  cmake_install.cmake  test.py  testCarMove.py
DataCollector/: CMakeCache.txt  CMakeLists.txt  CarMove.cpp  CarMove.h  DataCollector  DataCollector.cpp  Makefile  README.md  check-data.py  cmake_install.cmake
Joystick/: CMakeCache.txt  CMakeLists.txt  Joystick.cpp  Joystick.py  JoystickWrapper.cpp  Makefile  cmake_install.cmake
LaneKeepingAssist/: check-data.py  cnn_model.py  data_reader.py  lane_keeping_assist.py  neural_network.py  simulate_driving.py  simulate_driving2.py  steering_model-001.h5  steering_model-002.h5  steering_model-003.h5  steering_model-004.h5  steering_model.py  train.py  train_model.py  utility.py
ObjectDetection/: stop_sign_detection.py  test.py  test2.py  traffic_light_detection.py  vehicle_detection.py
Sensor/: CMakeLists.txt  install.sh
Sensor/include/: CarSensor.h  hgl40dn1.h  hgl40dn1Control.h  hgm40a.h  hgm40aControl.h  hgm40dn1.h  hgm40dn1Control.h  jetsonGPIO.h  ultraSonicSensor.h  ultraSonicSensorControl.h
Sensor/src/: CarSensor.cpp  hgl40dn1.cpp  hgl40dn1Control.cpp  hgm40a.cpp  hgm40aControl.cpp  hgm40dn1.cpp  hgm40dn1Control.cpp  jetsonGPIO.c  main.cpp
TrafficLightDetector/: .traffic_light_detection.py.swp  (+1 more)
tests/: lk.py  (+7 more)
(+47 files in other folders)
