cmake_minimum_required( VERSION 2.8 )
set ( CMAKE_CXX_STANDARD 11 )
project( DataCollector )
find_package( OpenCV REQUIRED )
find_package( Thread )
file( GLOB SOURCES "*.cpp" )
add_executable( DataCollector ${SOURCES} )
target_link_libraries( DataCollector ${OpenCV_LIBS} )
target_link_libraries( DataCollector ${CMAKE_THREAD_LIBS_INIT} )
